--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'jacoco'
 }
 
 group = 'com.example'
@@ -30,4 +31,33 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+jacoco {
+    toolVersion = "0.8.8"
+}
+
+test {
+    finalizedBy jacocoTestReport // ensure jacocoTestReport is always run after tests
+}
+
+jacocoTestReport {
+    dependsOn test // ensure tests are run before generating the report
+    reports {
+        xml.required = true
+        csv.required = false
+        html.required = true
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                'com/example/apitest/ApiTestApplication.class',
+                'com/example/apitest/config/**',
+                'com/example/apitest/controller/**',
+                'com/example/apitest/entity/**',
+                'com/example/apitest/repository/**',
+            ])
+        }))
+    }
 }
