--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.1",
     "react-syntax-highlighter": "^15.6.1",
     "styled-components": "^6.1.19",
     "typescript": "^4.9.5",
