--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "dev": "vite",
     "start": "vite",
     "build": "tsc && vite build",
+    "build:analyze": "tsc && vite build --mode analyze",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest"
@@ -56,9 +57,11 @@
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.1"
   }
