--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
     "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.1",
     "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.19",
     "typescript": "^4.9.5",
