--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,5 @@
-# 프로덕션 환경 설정
-VITE_API_BASE_URL=https://api.yourdomain.com
-VITE_API_TIMEOUT=15000
-VITE_API_RETRY_COUNT=2
-VITE_APP_DEBUG=false
+# 프로덕션 환경에서 사용할 API 서버 주소
+# 실제 서버 IP로 변경하세요 (예: http://192.168.1.100:8080)
+VITE_API_BASE_URL=http://YOUR_SERVER_IP:8080
+VITE_API_TIMEOUT=10000
+VITE_API_RETRY_COUNT=3
