--- a/runner/package.json
+++ b/runner/package.json
@@ -12,30 +12,31 @@
     "install-browsers": "npx playwright install"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.14.2",
-    "multer": "^1.4.4",
     "@playwright/test": "^1.40.0",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "multer": "^1.4.4",
     "uuid": "^9.0.1",
-    "fs-extra": "^11.1.1"
+    "ws": "^8.14.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.21",
-    "@types/ws": "^8.5.8",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^29.5.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.8.0",
     "@types/uuid": "^9.0.6",
-    "@types/fs-extra": "^11.0.4",
-    "@types/cors": "^2.8.15",
-    "typescript": "^5.2.2",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "eslint": "^8.51.0",
+    "@types/ws": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.6"
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "keywords": [
     "playwright",
